--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -46,6 +46,13 @@
     <!-- Add sortable.js reference if SortableList component is used in your application. -->
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script src="_content/Blazor.Bootstrap/blazor.bootstrap.js"></script>
+
+
+    <script>
+        function goBack() {
+            history.back();
+        }
+    </script>
 </body>
 
 </html>
